<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeBlue"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".onboarding.TutorialFragment">

    <Button
        android:id="@+id/btn_tutorial_get_started"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="64dp"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:background="@color/themePink"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:fontFamily="@font/rubik_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_tutorial"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:gravity="center"
        android:text="@string/tutorial_text"
        android:textColor="@color/colorWhite"
        android:textSize="42sp"
        app:fontFamily="@font/rubik_bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_tutorial_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_tutorial_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="24dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:background="@color/colorWhite"
        android:textColor="@color/themePink"
        android:textSize="14sp"
        app:fontFamily="@font/rubik_bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_tutorial_get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>